css styling to fix statsmsg display wrapping

--- a/src/style.css
+++ b/src/style.css
@@ -226,8 +226,10 @@ body{
   margin-top: -2%;
   padding-left: 1%;
   padding-right: 1%;
-  width: 34%;
+  width: 39%;
   align-self: center;
+  justify-content: center;
+  flex-wrap: nowrap;
 }
 
 #statusexamples{
